feat: better api
